modelou foto esmalte

--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -2,7 +2,7 @@
 
 
 
-<img src="http://www.tortugan.com.br/lojas/00020405/prod/esmalte.jpg"/>
+<img src="<%= @foto_esmalte.url %>"/>
 <p>Essa cor e da Colorama</p>
 <p>O nome da cor e vermelho paixao</p>
 <p>e feia</p>
